frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-raect-service
  namespace: app
spec:
  type: NodePort # You can change this to LoadBalancer if you are using a cloud provider
  ports:
    - port: 80 # Exposes the service on port 80
      targetPort: 80 # The port that the container exposes
      nodePort: 30080 # Port to expose on your local node (you can choose any available port)
  selector:
    app: frontend-raect
