frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-raect-service
                port:
                  number: 80
